--- a/index.html
+++ b/index.html
@@ -68,15 +68,17 @@ function logout() {
     <option value="Clear">Clear</option>
     <option value="Broken">Broken</option>
     <option value="Remediation">Remediation</option>
-  </select>
+    <option value="Replacement">Replacement</option>
+</select>
 </div>
 
 <script>
 let currentRole = null;
 let map;
+const importedFiles = new Set();
 const credentials = { admin: 'admin123', operator: 'operator123', viewer: 'viewer123' };
 const gullyData = [];
-const summaryCounts = { Clear: 0, Broken: 0, Remediation: 0 };
+const summaryCounts = { Clear: 0, Broken: 0, Remediation: 0 , Replacement: 0};
 const storageKey = 'gully_inspections';
 
 function login() {
@@ -93,6 +95,13 @@ function login() {
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
 
     document.getElementById('importFile').addEventListener('change', e => {
+      const file = e.target.files[0];
+      if (importedFiles.has(file.name)) {
+        alert("This file has already been imported.");
+        return;
+      }
+      importedFiles.add(file.name);
+    
       const file = e.target.files[0];
       const reader = new FileReader();
       reader.onload = () => {
@@ -165,11 +174,15 @@ function loadFromLocalStorage() {
                   : lastStatus === 'Aged' ? 'green'
                   : lastStatus === 'Expired' ? 'gray'
                   : lastStatus === 'Broken' ? 'orange'
-                  : lastStatus === 'Remediation' ? 'red' : 'gray';
+                  : lastStatus === 'Remediation' ? 'red'
+                  : lastStatus === 'Replacement' ? 'yellow'
+                  : 'gray';
       marker.setIcon(createDot(color));
       marker.bindTooltip(`${last.status} (${last.date})`);
     }
     marker.on('click', () => showPopup(marker, entry.latlng, dataLog));
+    if (summaryCounts[lastStatus] !== undefined) summaryCounts[lastStatus]++;
+    if (summaryCounts[lastStatus] !== undefined) summaryCounts[lastStatus]++;
     gullyData.push({ marker, dataLog, status: lastStatus });
   });
   updateSummary();
@@ -204,6 +217,14 @@ function showPopup(marker, latlng, dataLog) {
   });
   popup.appendChild(document.createTextNode(' Status: '));
   popup.appendChild(dropdown); popup.appendChild(document.createElement('br'));
+  const photoInput = document.createElement('input');
+  photoInput.type = 'file';
+  photoInput.accept = 'image/*';
+  photoInput.capture = 'environment';
+  popup.appendChild(document.createTextNode(' Take Photo: '));
+  popup.appendChild(photoInput);
+  popup.appendChild(document.createElement('br'));
+
 
   const editable = (currentRole === 'admin' || currentRole === 'operator');
   const adminOnly = (currentRole === 'admin');
@@ -224,6 +245,12 @@ function showPopup(marker, latlng, dataLog) {
 
   const saveBtn = document.createElement('button');
   saveBtn.innerText = 'Save';
+  const photoBtn = document.createElement('button');
+  photoBtn.innerText = 'Take Photo';
+  photoBtn.onclick = () => {
+    photoInput.click();
+  };
+
   saveBtn.disabled = !editable;
   saveBtn.onclick = () => {
     if (!checkbox.checked) return alert('Tick inspection complete');
@@ -242,11 +269,23 @@ function showPopup(marker, latlng, dataLog) {
 
     marker.setIcon(createDot(iconColor));
     marker.bindTooltip(`${status} (${date})`);
-    dataLog.push({ lat: latlng.lat, lng: latlng.lng, date, status, comment });
-    saveToLocalStorage();
-    marker.closePopup();
+    const photoFile = photoInput.files[0];
+    const reader = new FileReader();
+    reader.onload = function () {
+      const photoData = reader.result || "";
+      dataLog.push({ lat: latlng.lat, lng: latlng.lng, date, status, comment, photo: photoData });
+      saveToLocalStorage();
+      marker.closePopup();
+    };
+    if (photoFile) {
+      reader.readAsDataURL(photoFile);
+    } else {
+      reader.onload();
+    }
+    return;
   };
-  popup.appendChild(saveBtn);
+  popup.appendChild(photoBtn);
+popup.appendChild(saveBtn);
 
   const logBtn = document.createElement('button');
   logBtn.innerText = 'View Log';
